[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"
# authors = ["Your Name <you@example.com>"]
description = "See README.md"
# license = "MIT"
repository = "https://github.com/yourgithubusername/hello-wasm"

[lib]
crate-type = ["cdylib"]
# ^ Per https://doc.rust-lang.org/reference/linkage.html this means:
# --crate-type=cdylib, #[crate_type = "cdylib"] - A dynamic system library will be produced. 
# This is used when compiling a dynamic library to be loaded from another language. This output
# type will create *.so files on Linux, *.dylib files on macOS, and *.dll files on Windows.

[dependencies]
crc32fast = "1.3.2"
js-sys = "0.3.56"
wasm-bindgen = "0.2"
[dependencies.web-sys]
version = "0.3.56"
features = ['console', 'FileReaderSync', 'File']
