[package]
name = "pdf_explorer"
version = "0.1.0"
edition = "2021"
# authors = ["Your Name <you@example.com>"]
description = "See README.md"
# license = "MIT"
repository = "https://github.com/shreevatsa/pdf-explorer"

[lib]
name = "pdf_explorer"
crate-type = ["cdylib", "lib"]
# ^ Per https://doc.rust-lang.org/reference/linkage.html this means:
# --crate-type=cdylib, #[crate_type = "cdylib"] - A dynamic system library will be produced. 
# This is used when compiling a dynamic library to be loaded from another language. This output
# type will create *.so files on Linux, *.dylib files on macOS, and *.dll files on Windows.
# And per https://stackoverflow.com/questions/34463980/rust-cant-find-crate#comment115836739_49762980
# we need both, so that the binary can find it.

[features]
default = []
trace = ["nom-tracable/trace"]

[dependencies]
adorn = "0.4.0"
anyhow = "1.0.57"
backtrace = "0.3.65"
crc32fast = "1.3.2"
js-sys = "0.3.56"
lazy_static = "1.4.0"
nom = "7.1.1"
nom-tracable = "0.8.0"
nom_locate = "4.0.0"
parking_lot = "0.12.0"
# pprof = { version = "0.8.0", features = ["flamegraph"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[dependencies.web-sys]
version = "0.3.56"
features = ['console', 'FileReaderSync', 'File']

[[bin]]
name = "pdf_explore"
path = "src/bin.rs"

# See https://rustwasm.github.io/wasm-pack/book/cargo-toml-configuration.html
[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
# Should we enable wasm-bindgen's debug assertions in its generated JS glue?
debug-js-glue = true
# Should wasm-bindgen demangle the symbols in the "name" custom section?
demangle-name-section = true
# Should we emit the DWARF debug info custom sections?
dwarf-debug-info = true
